--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,13 @@ h1 {
 }
 
 ul {
-  text-decoration: none;
+  list-style: none;
+}
+
+.language-selected {
+  color: goldenrod;
+}
+
+.hidden {
+  display: none;
 }
